<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout android:background="@drawable/back1" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <ImageView android:id="@+id/img2" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="20.0dip" android:layout_marginTop="80.0dip" android:src="@drawable/main_hamrahaval" android:layout_alignParentLeft="true" android:layout_alignParentTop="true" android:contentDescription="@string/HamrahAval" />
    <ImageView android:id="@+id/img3" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="80.0dip" android:layout_marginRight="20.0dip" android:src="@drawable/main_irancell" android:layout_alignParentTop="true" android:layout_alignParentRight="true" android:contentDescription="@string/Irancell" />
    <ImageView android:id="@+id/img4" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="20.0dip" android:src="@drawable/main_talia" android:layout_below="@+id/img2" android:layout_alignLeft="@+id/img2" android:contentDescription="@string/Talia" />
    <ImageView android:id="@+id/img5" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="20.0dip" android:src="@drawable/main_rightel" android:layout_below="@+id/img3" android:layout_alignLeft="@+id/img3" android:contentDescription="@string/Rightel" />
    <ImageView android:id="@+id/kelid_main_tanzimat" android:layout_width="60.0dip" android:layout_height="60.0dip" android:src="@drawable/kelid_main_tanzimat" android:layout_alignParentRight="true" android:layout_alignParentBottom="true" android:contentDescription="@string/app_name" />
    <ImageView android:id="@+id/kelid_main_gav" android:layout_width="60.0dip" android:layout_height="60.0dip" android:layout_marginLeft="15.0dip" android:src="@drawable/kelid_main_gav" android:layout_alignLeft="@+id/img5" android:layout_alignParentBottom="true" android:contentDescription="@string/app_name" />

    <ImageView
        android:id="@+id/main_bill"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/kelid_main_tanzimat"
        android:layout_alignParentRight="true"
        android:layout_marginBottom="18dp"
        android:src="@drawable/main_bill" />

</RelativeLayout>